# cache-recall

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.cache/: _index.json
.github/workflows/: ci.yml
scripts/: recall_cli.py
src/recall/: __init__.py  cache.py  config.py  economy.py  mcp_server.py  memory.py
tests/: test_cache.py
