[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-ai"
version = "1.0.0"
description = "Семантический кэш и долговременная память для ИИ-агентов"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Recall Contributors"}
]
keywords = ["ai", "cache", "memory", "mcp", "llm", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
recall = "scripts.recall_cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/recall"
Repository = "https://github.com/YOUR_USERNAME/recall"
Issues = "https://github.com/YOUR_USERNAME/recall/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
